Improved Error Messages + Logs